--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 	<body>
 		<header>
 			<div id="weather">
-				<span></span>
-				<span></span>
+				<div>
+					<span id="temperature"></span>
+				</div>
+				<span id="city"></span>
 			</div>
 		</header>
 		<main>
