--- a/index.html
+++ b/index.html
@@ -7,49 +7,146 @@
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<header>
-			<div id="weather">
-				<div>
-					<span id="temperature"></span>
+		<div id="momentum">
+			<header>
+				<div id="links">
+					<span>Favorite Links</span>
 				</div>
-				<span id="city"></span>
-			</div>
-		</header>
-		<main>
-			<h2 id="clock">00:00:00</h2>
-			<form id="login-form" class="hidden">
-				<input
-					type="text"
-					required
-					maxlength="15"
-					placeholder="What is your name?"
-				/>
-				<button>Log In</button>
-			</form>
-			<h1 id="greeting" class="hidden"></h1>
-			<div></div>
-			<div id="todo">
-				<form id="todo-form" class="hidden">
+				<div id="custom">
+					<span>Custom Background</span>
+				</div>
+				<div id="weather">
+					<div>
+						<span id="temperature"></span>
+					</div>
+					<span id="city"></span>
+				</div>
+			</header>
+			<main>
+				<h2 id="clock">00:00:00</h2>
+				<form id="login-form" class="hidden">
 					<input
 						type="text"
-						placeholder="Write a To Do and Press Enter"
 						required
+						maxlength="15"
+						placeholder="What is your name?"
 					/>
+					<button>Log In</button>
 				</form>
-				<ul id="todo-list"></ul>
+				<h1 id="greeting" class="hidden"></h1>
+				<div></div>
+				<div id="todo">
+					<form id="todo-form" class="hidden">
+						<input
+							type="text"
+							placeholder="Write a To Do and Press Enter"
+							required
+						/>
+					</form>
+					<ul id="todo-list"></ul>
+				</div>
+			</main>
+			<footer>
+				<div id="quote">
+					<span></span>
+					<span></span>
+				</div>
+				<dialog class="lower"></dialog>
+			</footer>
+		</div>
+		<div id="meme-maker" class="hidden">
+			<div class="color-options">
+				<input type="color" id="color" />
+				<div
+					class="color-option"
+					style="background-color: #1abc9c"
+					data-color="#1abc9c"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #3498db"
+					data-color="#3498db"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #34495e"
+					data-color="#34495e"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #27ae60"
+					data-color="#27ae60"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #8e44ad"
+					data-color="#8e44ad"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #f1c40f"
+					data-color="#f1c40f"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #e74c3c"
+					data-color="#e74c3c"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #95a5a6"
+					data-color="#95a5a6"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #d35400"
+					data-color="#d35400"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #2ecc71"
+					data-color="#2ecc71"
+				></div>
+				<div
+					class="color-option"
+					style="background-color: #e67e22"
+					data-color="#e67e22"
+				></div>
 			</div>
-		</main>
-		<footer>
-			<div id="quote">
-				<span></span>
-				<span></span>
+			<canvas></canvas>
+
+			<div class="btns">
+				<span>Brush Width</span>
+				<input
+					id="line-width"
+					type="range"
+					min="1"
+					max="10"
+					value="5"
+					step="0.5"
+				/>
+				<button id="mode-btn">💧 Fill</button>
+				<button id="destroy-btn">💣 Destroy</button>
+				<button id="eraser-btn">❌ Erase</button>
+				<label for="file">
+					🖋️ Add Photo
+					<input type="file" accept="image/*" id="file" />
+				</label>
+				<input
+					type="text"
+					placeholder="Add text here... :)"
+					id="text"
+				/>
+				<button id="save-btn">🖼️ Save Image</button>
+				<button id="back-btn">↩️ Back to Main</button>
 			</div>
-		</footer>
+		</div>
 		<script src="js/greetings.js"></script>
 		<script src="js/clock.js"></script>
 		<script src="js/quotes.js"></script>
 		<script src="js/background.js"></script>
 		<script src="js/todo.js"></script>
 		<script src="js/weather.js"></script>
+		<script src="js/meme-maker.js"></script>
 	</body>
 </html>
